--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     </div>
     
     <div class="half-width"> 
-        <img class="side-img" src="/Images/Profile.jpg" alt="Soós Márk" >
+        <img class="side-img" src="/Images/profile.jpg" alt="Soós Márk" >
     </div>
 </section>
 
 <section class="container">
     <div class="half-width">
-        <img class="side-img" src="/Images/Card.jpg" alt="Soós Márk kártyával a kezében">
+        <img class="side-img" src="/Images/card.jpg" alt="Soós Márk kártyával a kezében">
     </div>
     <div class="half-width">
         <h2> Az álmom </h2>
