--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     
     <div class="half-width"> 
-        <img class="side-img" src="Portfolio/Images/profile.jpg" alt="Soós Márk" >
+        <img class="side-img" src="profile.jpg" alt="Soós Márk" >
     </div>
 </section>
 
